Update Arduino code for waveform generation and add laboratory report for digital transmission experiments

--- a/teoria de la información/taller 1/templates/index.html
+++ b/teoria de la información/taller 1/templates/index.html
@@ -11,6 +11,8 @@
         <h1>Codificador Huffman</h1>
         <textarea id="inputText" placeholder="Ingrese su mensaje aquí..."></textarea>
         <button onclick="encodeMessage()">Codificar</button>
+        <button onclick="save_file()">Guardar</button>
+        
 
         <div id="output" class="output-box">
             <!-- Resultados aparecerán aquí -->
